test/visibility/import/noUnscoreRename.good
noUnscoreRename.chpl:4: In module 'User':
noUnscoreRename.chpl:5: error: Throwaway variable '_' is not allowed in this context
